--- a/seminars/react-14_06_2023/package.json
+++ b/seminars/react-14_06_2023/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "22_react_redux",
+  "name": "react-14_06_2023",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,14 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.35",
-    "@types/react": "^18.2.11",
-    "@types/react-dom": "^18.2.4",
+    "@types/node": "^16.18.36",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "@types/react-redux": "^7.1.25",
-    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.7",
+    "react-redux": "^8.1.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
